@@ -91,6 +91,19 @@ class ListCommand(Command):
                  "installed packages.",
         )
 
+        cmd_opts.add_option(
+            '--exclude-editable',
+            action='store_false',
+            dest='include_editable',
+            help='Exclude editable package from output.',
+        )
+        cmd_opts.add_option(
+            '--include-editable',
+            action='store_true',
+            dest='include_editable',
+            help='Include editable package from output.',
+            default=True,
+        )
         index_opts = make_option_group(index_group, self.parser)
 
         self.parser.insert_option_group(0, index_opts)
@@ -151,6 +164,7 @@ class ListCommand(Command):
             local_only=options.local,
             user_only=options.user,
             editables_only=options.editable,
+            include_editables=options.include_editable,
         )
 
         if options.outdated:
